--- a/app/src/main/res/layout/fragment_new_note.xml
+++ b/app/src/main/res/layout/fragment_new_note.xml
@@ -5,7 +5,7 @@
     android:id="@+id/new_note"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white_200"
+    android:background="@color/note_background"
     android:orientation="vertical"
     tools:context=".ui.NewNoteFragment">
 
@@ -25,6 +25,7 @@
             android:layout_marginTop="20dp"
             android:text="노트의 제목"
             android:textSize="35dp"
+            android:textColor="@color/detail_note_page_title"
             android:textStyle="bold" />
 
         <TextView
@@ -35,6 +36,7 @@
             android:layout_marginStart="36dp"
             android:layout_marginTop="28dp"
             android:text="생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트"
+            android:textColor="@color/detail_note_page_content"
             android:textSize="20dp" />
 
     </LinearLayout>
