--- a/app/src/main/res/layout/fragment_all_note.xml
+++ b/app/src/main/res/layout/fragment_all_note.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white_200">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="50dp">
-
-
-</LinearLayout>
 
 <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/all_note_list_recycler_view"
