--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/note_background">
 
     <LinearLayout
         android:layout_width="345dp"
@@ -16,8 +17,10 @@
             android:layout_marginTop="30dp"
             android:text="질의 언어는 데이터 베이스에서 무엇을 요구하기 위해 사용되는 언어인가요?"
             android:textSize="20dp"
+            android:lineSpacingMultiplier="1.5"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/quiz"
+            android:fontFamily="@font/pretendard_medium"
             android:textStyle="bold" />
     </LinearLayout>
 
@@ -40,28 +43,48 @@
 
             <RadioButton
                 android:id="@+id/radioButton1"
-                android:textSize="24dp"
+                android:textSize="20dp"
                 android:text="기계어"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@color/content"
+                android:fontFamily="@font/pretendard_regular"
+                android:lineSpacingMultiplier="1.2"
+                android:paddingLeft="10dp"/>
 
             <RadioButton
                 android:id="@+id/radioButton2"
-                android:textSize="24dp"
+                android:textSize="20dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@color/content"
+                android:fontFamily="@font/pretendard_regular"
+                android:lineSpacingMultiplier="1.3"
+                android:paddingLeft="10dp"/>
 
             <RadioButton
                 android:id="@+id/radioButton3"
-                android:textSize="24dp"
+                android:textSize="20dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@color/content"
+                android:fontFamily="@font/pretendard_regular"
+                android:lineSpacingMultiplier="1.3"
+                android:paddingLeft="10dp"/>
 
             <RadioButton
                 android:id="@+id/radioButton4"
-                android:textSize="24dp"
+                android:textSize="20dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@color/content"
+                android:fontFamily="@font/pretendard_regular"
+                android:lineSpacingMultiplier="1.3"
+                android:paddingLeft="10dp"/>
 
         </RadioGroup>
 
@@ -121,6 +144,8 @@
         android:textSize="15dp"
         android:gravity="center"
         android:textColor="@color/green"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:fontFamily="@font/pretendard_regular"
+        android:lineSpacingMultiplier="1.3"/>
 
 </LinearLayout>
