--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -21,5 +21,11 @@
     <color name="detail_note_page_title">#FFFFFF</color>
     <color name="detail_note_page_content">#FFFFFF</color>
 
+    <!-- 퀴즈 문서 보기 -->
+    <color name="quiz_background">#333333</color>
+    <color name="question">#EDEEF0</color>
+    <color name="quiz">#FFFFFF</color>
+    <color name="content">#EDEEF0</color>
+
     <color name="white">#FFFFFF</color>
 </resources>
