--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -18,7 +18,7 @@
         android:id="@+id/note_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/yeongdeoksea"
         android:text="데이터 베이스의 이해"
@@ -26,16 +26,23 @@
         android:textSize="40dp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/note_summary"
-        android:layout_width="370dp"
-        android:layout_height="600dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/yeongdeoksea"
-        android:text="질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어"
-        android:textColor="@color/detail_note_page_content"
-        android:textSize="23dp" />
+        <ScrollView
+            android:layout_width="370dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp">
+
+
+            <TextView
+                android:id="@+id/note_summary"
+                android:layout_width="370dp"
+                android:layout_height="600dp"
+                android:fontFamily="@font/yeongdeoksea"
+                android:text="# 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n# 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n "
+                android:textColor="@color/detail_note_page_content"
+                android:textSize="23dp" />
+
+        </ScrollView>
+
 
     </LinearLayout>
 
