--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -4,8 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <LinearLayout
-        android:layout_width="345dp"
+        android:layout_width="380dp"
         android:layout_height="120dp"
         android:layout_gravity="center">
 
@@ -14,110 +15,73 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text="질의 언어는 데이터 베이스에서 무엇을 요구하기 위해 사용되는 언어인가요?"
-            android:textSize="20dp"
             android:gravity="center"
+            android:text="비트 병렬 알고리즘(Bit-Parallel Algorithm)은 무엇인가요?"
             android:textColor="@color/black"
+            android:textSize="20dp"
             android:textStyle="bold" />
     </LinearLayout>
 
-
     <LinearLayout
-        android:layout_width="300dp"
+        android:layout_width="370dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="40dp"
         android:orientation="vertical">
 
 
-
         <RadioGroup
             android:id="@+id/radioGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_below="@id/textView"
             android:orientation="vertical">
 
             <RadioButton
                 android:id="@+id/radioButton1"
-                android:textSize="24dp"
-                android:text="기계어"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="1. 다중 스레드를 사용하여 비트 연산을 동시에 처리하는 알고리즘입니다."
+                android:textSize="22dp" />
 
             <RadioButton
                 android:id="@+id/radioButton2"
-                android:textSize="24dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="2. 비트 연산을 이용하여 데이터를 병렬적으로 처리하는 알고리즘입니다."
+                android:textSize="22dp" />
 
             <RadioButton
                 android:id="@+id/radioButton3"
-                android:textSize="24dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="3. 비트의 상태에 따라 분기하여 연산을 수행하는 알고리즘입니다."
+                android:textSize="22dp" />
 
             <RadioButton
                 android:id="@+id/radioButton4"
-                android:textSize="24dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="4. 비트를 배열 형태로 저장하여 연속적인 비트 연산을 수행하는 알고리즘입니다."
+                android:textSize="22dp" />
 
         </RadioGroup>
 
-
-<!--        <TextView-->
-<!--            android:id="@+id/answer1"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="10dp"-->
-<!--            android:layout_marginLeft="10dp"-->
-<!--            android:text="① 프로그래밍 언어"-->
-<!--            android:textSize="20dp"-->
-<!--            android:textStyle="bold" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/answer2"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="25dp"-->
-<!--            android:layout_marginLeft="10dp"-->
-<!--            android:text="② 자연 언어"-->
-<!--            android:textSize="20dp"-->
-<!--            android:textStyle="bold" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/answer3"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="25dp"-->
-<!--            android:layout_marginLeft="10dp"-->
-<!--            android:text="③ 관계 대수"-->
-<!--            android:textSize="20dp"-->
-<!--            android:textStyle="bold" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/answer4"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="25dp"-->
-<!--            android:layout_marginLeft="10dp"-->
-<!--            android:text="④ 기계어"-->
-<!--            android:textSize="20dp"-->
-<!--            android:textStyle="bold" />-->
-
     </LinearLayout>
-
-
 
     <TextView
         android:id="@+id/txt_explanation"
         android:visibility="invisible"
-        android:layout_width="280dp"
+        android:layout_width="380dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
-        android:text="정답 : 3번, 아무렇게나 만든 문제이므로 의미는 없습니다."
+        android:text="비트 병렬 알고리즘은 비트 연산을 이용하여 데이터를 병렬적으로 처리하는 알고리즘입니다. 따라서 정답은 2번입니다."
         android:textSize="15dp"
         android:gravity="center"
         android:textColor="@color/green"
