퀴즈 뷰어 해설 문제 해결

--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -78,7 +78,7 @@
         android:id="@+id/txt_explanation"
         android:visibility="invisible"
         android:layout_width="350dp"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:text="비트 병렬 알고리즘은 비트 연산을 이용하여 데이터를 병렬적으로 처리하는 알고리즘입니다. 따라서 정답은 2번입니다."
