--- a/app/src/main/res/layout/fragment_quiz_viewer.xml
+++ b/app/src/main/res/layout/fragment_quiz_viewer.xml
@@ -104,7 +104,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ScrollView
-        android:layout_width="370dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center">
 
