--- a/app/src/main/res/layout/all_quiz_list_item.xml
+++ b/app/src/main/res/layout/all_quiz_list_item.xml
@@ -44,6 +44,8 @@
             android:layout_gravity="bottom"
             android:layout_marginStart="18dp"
             android:layout_marginTop="13dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:fontFamily="@font/pretendard_medium"
             android:text="note 1"
             android:textColor="@color/list_title"
