--- a/app/src/main/res/layout/quiz_list_item.xml
+++ b/app/src/main/res/layout/quiz_list_item.xml
@@ -43,7 +43,9 @@
                 android:layout_marginTop="15dp"
                 android:fontFamily="@font/pretendard_medium"
                 android:letterSpacing="0"
-                android:text="알고리즘의 퀴즈"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="알고리즘의 퀴즈 알고리즘의 퀴즈"
                 android:textColor="@color/white"
                 android:textSize="30dp"
                 android:textStyle="bold"
