노트 메이커 프래그먼트 레이아웃 수정

--- a/app/src/main/res/layout/fragment_my_note.xml
+++ b/app/src/main/res/layout/fragment_my_note.xml
@@ -54,7 +54,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline1"
@@ -102,7 +102,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/note_list_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="15dp"
             app:layout_constraintBottom_toTopOf="@+id/guideline5"
             app:layout_constraintEnd_toEndOf="parent"
@@ -159,8 +159,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/quiz_list_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="305dp"
+            android:layout_height="0dp"
             android:layout_marginTop="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
