--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -1,27 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="match_parent">
 
-<!--    이미지의 둥근 모서리 디자인을 적용시키기 위해 CardView사용-->
+    <!--    이미지의 둥근 모서리 디자인을 적용시키기 위해 CardView사용-->
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="210dp"
-        android:layout_height="250dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         app:cardCornerRadius="30dp"
         app:cardElevation="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintDimensionRatio="0.84:1"
+
         app:cardBackgroundColor="@android:color/transparent">
 
         <ImageView
             android:id="@+id/imgView_note"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
+            android:layout_height="match_parent"
             android:background="@android:color/transparent"
-            app:srcCompat="@drawable/img_note_3"/>
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/img_note_3" />
 
         <TextView
             android:id="@+id/txt_note_title"
@@ -55,4 +59,4 @@
             android:layout_marginStart="15dp"/>
 
     </androidx.cardview.widget.CardView>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
