--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -17,5 +17,6 @@
         <!--        local test-->
         <domain includeSubdomains="true">172.20.10.2</domain>
 
+        <domain includeSubdomains="true">192.168.0.23</domain>
     </domain-config>
 </network-security-config>
