--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -18,8 +18,8 @@
         android:id="@+id/note_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/yeongdeoksea"
         android:text="데이터 베이스의 이해"
         android:textColor="@color/detail_note_page_title"
@@ -27,15 +27,15 @@
         android:textStyle="bold" />
 
         <ScrollView
-            android:layout_width="370dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp">
 
 
             <TextView
                 android:id="@+id/note_summary"
-                android:layout_width="370dp"
-                android:layout_height="600dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/yeongdeoksea"
                 android:text="# 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n# 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n "
                 android:textColor="@color/detail_note_page_content"
