--- a/app/src/main/res/layout/fragment_new_note.xml
+++ b/app/src/main/res/layout/fragment_new_note.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/new_note"
     android:layout_width="match_parent"
@@ -11,60 +10,71 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="660dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/img_note_background"
         android:orientation="vertical"
         android:id="@+id/note">
 
+
         <TextView
-            android:fontFamily="@font/yeongdeoksea"
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="20dp"
-            android:text="노트의 제목"
-            android:textSize="35dp"
+            android:fontFamily="@font/yeongdeoksea"
+            android:text="데이터 베이스의 이해"
             android:textColor="@color/detail_note_page_title"
+            android:textSize="40dp"
             android:textStyle="bold" />
 
-        <TextView
-            android:fontFamily="@font/yeongdeoksea"
-            android:id="@+id/text_summary_note"
-            android:layout_width="333dp"
+
+        <ScrollView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="28dp"
-            android:text="생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트\n생성된 요약 노트"
-            android:textColor="@color/detail_note_page_content"
-            android:textSize="20dp" />
+            android:layout_margin="20dp">
+
+            <TextView
+                android:fontFamily="@font/yeongdeoksea"
+                android:id="@+id/text_summary_note"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="# 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n# 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n # 질의어 : 데이터베이스 정보 요구를 위해 사용하는 언어\n\n "
+                android:textColor="@color/detail_note_page_content"
+                android:textSize="23dp" />
+
+        </ScrollView>
+
+
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_marginTop="14dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal"
+        android:background="@color/background_color">
 
         <Button
             android:id="@+id/btn_return_camera"
-            android:layout_width="120dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginRight="15dp"
+            android:layout_weight="1"
+            android:layout_marginEnd="5dp"
             android:textStyle="bold"
-            android:text="다시찍기" />
+            android:text="다시찍기"/>
 
         <Button
             android:id="@+id/btn_save_note"
-            android:layout_width="120dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="저장하기"
-            android:layout_marginLeft="15dp"
-            android:textStyle="bold" />
-
+            android:layout_weight="1"
+            android:layout_marginStart="5dp"
+            android:textStyle="bold"
+            android:text="저장하기"/>
 
 
     </LinearLayout>
