--- a/app/src/main/res/layout/all_note_list_item.xml
+++ b/app/src/main/res/layout/all_note_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:id="@+id/fragment_all_my_note">
@@ -37,20 +38,33 @@
 
         </androidx.cardview.widget.CardView>
 
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="20dp"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/imageView2"
+            app:layout_constraintTop_toTopOf="parent"
+            android:orientation="horizontal">
+
+        </LinearLayout>
+
         <TextView
             android:id="@+id/txt_full_note_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_marginStart="18dp"
-            android:layout_marginTop="13dp"
-            android:fontFamily="@font/pretendard_medium"
+            android:layout_marginTop="16dp"
             android:ellipsize="end"
+            android:fontFamily="@font/pretendard_medium"
             android:maxLines="1"
             android:text="note 1"
             android:textColor="@color/list_title"
             android:textSize="18dp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/cardView2"
             app:layout_constraintTop_toTopOf="parent" />
 
