--- a/app/src/main/res/layout/fragment_note_viewer.xml
+++ b/app/src/main/res/layout/fragment_note_viewer.xml
@@ -22,21 +22,25 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/img_left_cross" />
 
+
         <TextView
             android:id="@+id/txt_note_viewr_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginTop="17dp"
             android:layout_marginBottom="12dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:text="Note 1"
             android:textColor="@color/detail_note_main_title"
             android:textSize="20dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/menu_vertical"
+            app:layout_constraintHorizontal_bias="0.015"
             app:layout_constraintStart_toEndOf="@+id/img_btn_back"
             app:layout_constraintTop_toTopOf="parent" />
-
 
         <ImageView
             android:id="@+id/menu_vertical"
