--- a/app/src/main/res/layout/select_note_to_save_dialog.xml
+++ b/app/src/main/res/layout/select_note_to_save_dialog.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="400dp"
+    android:layout_width="match_parent"
     android:layout_height="400dp"
     android:gravity="center"
     android:backgroundTint="@color/white"
@@ -26,8 +26,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/custom_dialog_recycler_view"
-        android:layout_width="385dp"
-        android:layout_height="300dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="300dp" />
 
 
 </LinearLayout>
